; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_nv40.c_nv40_therm_ctor.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/subdev/therm/extr_nv40.c_nv40_therm_ctor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i32 }
%struct.nouveau_oclass = type { i32 }
%struct.nv40_therm_priv = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { %struct.TYPE_8__, %struct.TYPE_5__ }
%struct.TYPE_8__ = type { i32, i32, i32, i32 }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_7__ = type { i32 }

@nv40_fan_pwm_ctrl = common dso_local global i32 0, align 4
@nv40_fan_pwm_get = common dso_local global i32 0, align 4
@nv40_fan_pwm_set = common dso_local global i32 0, align 4
@nv40_temp_get = common dso_local global i32 0, align 4
@nouveau_therm_program_alarms_polling = common dso_local global i32 0, align 4
@nv40_therm_intr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nouveau_object*, %struct.nouveau_object*, %struct.nouveau_oclass*, i8*, i32, %struct.nouveau_object**)* @nv40_therm_ctor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nv40_therm_ctor(%struct.nouveau_object* %0, %struct.nouveau_object* %1, %struct.nouveau_oclass* %2, i8* %3, i32 %4, %struct.nouveau_object** %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.nouveau_object*, align 8
  %9 = alloca %struct.nouveau_object*, align 8
  %10 = alloca %struct.nouveau_oclass*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.nouveau_object**, align 8
  %14 = alloca %struct.nv40_therm_priv*, align 8
  %15 = alloca i32, align 4
  store %struct.nouveau_object* %0, %struct.nouveau_object** %8, align 8
  store %struct.nouveau_object* %1, %struct.nouveau_object** %9, align 8
  store %struct.nouveau_oclass* %2, %struct.nouveau_oclass** %10, align 8
  store i8* %3, i8** %11, align 8
  store i32 %4, i32* %12, align 4
  store %struct.nouveau_object** %5, %struct.nouveau_object*** %13, align 8
  %16 = load %struct.nouveau_object*, %struct.nouveau_object** %8, align 8
  %17 = load %struct.nouveau_object*, %struct.nouveau_object** %9, align 8
  %18 = load %struct.nouveau_oclass*, %struct.nouveau_oclass** %10, align 8
  %19 = call i32 @nouveau_therm_create(%struct.nouveau_object* %16, %struct.nouveau_object* %17, %struct.nouveau_oclass* %18, %struct.nv40_therm_priv** %14)
  store i32 %19, i32* %15, align 4
  %20 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %21 = call %struct.nouveau_object* @nv_object(%struct.nv40_therm_priv* %20)
  %22 = load %struct.nouveau_object**, %struct.nouveau_object*** %13, align 8
  store %struct.nouveau_object* %21, %struct.nouveau_object** %22, align 8
  %23 = load i32, i32* %15, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %6
  %26 = load i32, i32* %15, align 4
  store i32 %26, i32* %7, align 4
  br label %61

27:                                               ; preds = %6
  %28 = load i32, i32* @nv40_fan_pwm_ctrl, align 4
  %29 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %30 = getelementptr inbounds %struct.nv40_therm_priv, %struct.nv40_therm_priv* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %31, i32 0, i32 3
  store i32 %28, i32* %32, align 4
  %33 = load i32, i32* @nv40_fan_pwm_get, align 4
  %34 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %35 = getelementptr inbounds %struct.nv40_therm_priv, %struct.nv40_therm_priv* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %36, i32 0, i32 2
  store i32 %33, i32* %37, align 4
  %38 = load i32, i32* @nv40_fan_pwm_set, align 4
  %39 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %40 = getelementptr inbounds %struct.nv40_therm_priv, %struct.nv40_therm_priv* %39, i32 0, i32 0
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %41, i32 0, i32 1
  store i32 %38, i32* %42, align 4
  %43 = load i32, i32* @nv40_temp_get, align 4
  %44 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %45 = getelementptr inbounds %struct.nv40_therm_priv, %struct.nv40_therm_priv* %44, i32 0, i32 0
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %46, i32 0, i32 0
  store i32 %43, i32* %47, align 4
  %48 = load i32, i32* @nouveau_therm_program_alarms_polling, align 4
  %49 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %50 = getelementptr inbounds %struct.nv40_therm_priv, %struct.nv40_therm_priv* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 1
  %52 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %51, i32 0, i32 0
  store i32 %48, i32* %52, align 4
  %53 = load i32, i32* @nv40_therm_intr, align 4
  %54 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %55 = call %struct.TYPE_7__* @nv_subdev(%struct.nv40_therm_priv* %54)
  %56 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i32 0, i32 0
  store i32 %53, i32* %56, align 4
  %57 = load %struct.nv40_therm_priv*, %struct.nv40_therm_priv** %14, align 8
  %58 = getelementptr inbounds %struct.nv40_therm_priv, %struct.nv40_therm_priv* %57, i32 0, i32 0
  %59 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %58, i32 0, i32 0
  %60 = call i32 @nouveau_therm_preinit(%struct.TYPE_8__* %59)
  store i32 %60, i32* %7, align 4
  br label %61

61:                                               ; preds = %27, %25
  %62 = load i32, i32* %7, align 4
  ret i32 %62
}

declare dso_local i32 @nouveau_therm_create(%struct.nouveau_object*, %struct.nouveau_object*, %struct.nouveau_oclass*, %struct.nv40_therm_priv**) #1

declare dso_local %struct.nouveau_object* @nv_object(%struct.nv40_therm_priv*) #1

declare dso_local %struct.TYPE_7__* @nv_subdev(%struct.nv40_therm_priv*) #1

declare dso_local i32 @nouveau_therm_preinit(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
